# SMS

./: CMakeLists.txt  Readme.md  main.cpp
dataset/LNBL3DataSet/A. thaliana/: A. thaliana.txt
dataset/LNBL3DataSet/C. elegans/: C. elegans.txt
dataset/LNBL3DataSet/D. Melanogaster/: D. Melanogaster.txt
dataset/LNBL3DataSet/HuRI/: HuRI.txt
dataset/LNBL3DataSet/S. cerevisiae/: S. cerevisiae.txt
dataset/LNBL3DataSet/S. pombe/: S. pombe.txt  S. pombeTest_0.txt  S. pombeTest_1.txt  S. pombeTest_2.txt  S. pombeTest_3.txt  S. pombeTest_4.txt  S. pombeTest_5.txt  S. pombeTest_6.txt  S. pombeTest_7.txt  S. pombeTest_8.txt  S. pombeTest_9.txt  S. pombeTrain_0.txt  S. pombeTrain_1.txt  S. pombeTrain_2.txt  S. pombeTrain_3.txt  S. pombeTrain_4.txt  S. pombeTrain_5.txt  S. pombeTrain_6.txt  S. pombeTrain_7.txt  (+2 more)
dataset/origin_data/: A. thaliana.txt  C. elegans.txt  D. melanogaster.txt  HuRI.txt  S. cerevisiae.txt  S. pombe.txt
dataset/seq/: seq_A. thalianaMap2.txt  seq_C. elegansMap2.txt  seq_HuRIMap2.txt  seq_S. cerevisiaeMap2.txt  seq_S. pombeMap2.txt
include/: baseStruct.hpp  bioAlgorith.h  dataDeal.h  dataDir.h  date.hpp  evaluator.h  graph.h  linkPrediction.h  main_function.h  matrix.h  myAlgorithm.h
result/: description
src/: bioAlgorith.cpp  dataDeal.cpp  dataDir.cpp  description  evaluator.cpp  graph.cpp  main_function.cpp  matrix.cpp  myAlgorithm.cpp
src/link_prediciton/: L2.cpp  L3.cpp  SMS_DCN_amd_seq.cpp  linkPredicition.cpp
temp/: S. pombe_cn_and_edges_density.txt  sc_S. pombe.txt
tool/: accNetworkFeatures.py  fasta_to_map.py  show_xy_ave_cn.ipynb
